[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "cedric"
version = "0.0.4"
authors = [
  { name="Abhishek Choudhury", email="choudhuryabhishek76@gmail.com" },
]
description = "Cedric is a Python library designed to streamline the process of setting up a Django application."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/cedric"
"Bug Tracker" = "https://github.com/pypa/cedric/issues"