[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "cedric"
version = "0.0.7"
authors = [
  { name="Abhishek Choudhury", email="choudhuryabhishek76@gmail.com" },
]
description = "Cedric is a Python library designed to streamline the process of setting up a Django application."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.pdm.dependencies]
python = ">=3.8"
django = "4.2"
art = "6.1"
inquirer ="3.1.3"


[tool.pdm.scripts]
setup = "src.cli:main"

[project.urls]
"Homepage" = "https://github.com/pypa/cedric"
"Bug Tracker" = "https://github.com/pypa/cedric/issues"